--- a/client/package.json
+++ b/client/package.json
@@ -17,12 +17,14 @@
     "@trpc/next": "next",
     "@trpc/react-query": "next",
     "@trpc/server": "next",
+    "firebase": "^10.9.0",
     "next": "^14.1.3",
     "next-auth": "^4.24.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
+    "typestub-ipfs-only-hash": "^4.0.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
