--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@trpc/react-query": "next",
     "@trpc/server": "next",
     "firebase": "^10.9.0",
+    "flowbite-react": "^0.7.5",
     "next": "^14.1.3",
     "next-auth": "^4.24.6",
     "react": "18.2.0",
