--- a/client/package.json
+++ b/client/package.json
@@ -1,52 +1,53 @@
 {
-  "name": "client",
-  "version": "0.1.0",
-  "private": true,
-  "type": "module",
-  "scripts": {
-    "build": "next build",
-    "dev": "next dev",
-    "lint": "next lint",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@aurowallet/mina-provider": "^1.0.2",
-    "@t3-oss/env-nextjs": "^0.9.2",
-    "@tanstack/react-query": "^5.25.0",
-    "@trpc/client": "next",
-    "@trpc/next": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
-    "firebase": "^10.9.0",
-    "flowbite-react": "^0.7.5",
-    "next": "^14.1.3",
-    "next-auth": "^4.24.6",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-icons": "^5.0.1",
-    "server-only": "^0.0.1",
-    "superjson": "^2.2.1",
-    "typestub-ipfs-only-hash": "^4.0.0",
-    "zod": "^3.22.4"
-  },
-  "devDependencies": {
-    "@types/eslint": "^8.56.2",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^14.1.3",
-    "eslint-config-prettier": "^9.1.0",
-    "postcss": "^8.4.34",
-    "prettier": "3.2.5",
-    "prettier-plugin-tailwindcss": "^0.5.11",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.4.2"
-  },
-  "ct3aMetadata": {
-    "initVersion": "7.30.0"
-  },
-  "packageManager": "npm@10.2.4"
+	"name": "client",
+	"version": "0.1.0",
+	"private": true,
+	"type": "module",
+	"scripts": {
+		"build": "next build",
+		"dev": "next dev",
+		"lint": "next lint",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@aurowallet/mina-provider": "^1.0.2",
+		"@t3-oss/env-nextjs": "^0.9.2",
+		"@tanstack/react-query": "^5.25.0",
+		"@trpc/client": "next",
+		"@trpc/next": "next",
+		"@trpc/react-query": "next",
+		"@trpc/server": "next",
+		"firebase": "^10.9.0",
+		"flowbite-react": "^0.7.5",
+		"next": "^14.1.3",
+		"next-auth": "^4.24.6",
+		"react": "18.2.0",
+		"react-dom": "18.2.0",
+		"react-icons": "^5.0.1",
+		"server-only": "^0.0.1",
+		"superjson": "^2.2.1",
+		"typestub-ipfs-only-hash": "^4.0.0",
+		"zod": "^3.22.4"
+	},
+	"devDependencies": {
+		"@types/eslint": "^8.56.2",
+		"@types/luxon": "^3.4.2",
+		"@types/node": "^20.11.20",
+		"@types/react": "^18.2.57",
+		"@types/react-dom": "^18.2.19",
+		"@typescript-eslint/eslint-plugin": "^7.1.1",
+		"@typescript-eslint/parser": "^7.1.1",
+		"eslint": "^8.57.0",
+		"eslint-config-next": "^14.1.3",
+		"eslint-config-prettier": "^9.1.0",
+		"postcss": "^8.4.34",
+		"prettier": "3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.11",
+		"tailwindcss": "^3.4.1",
+		"typescript": "^5.4.2"
+	},
+	"ct3aMetadata": {
+		"initVersion": "7.30.0"
+	},
+	"packageManager": "npm@10.2.4"
 }
