--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.51.2",
 		"react-icons": "^5.0.1",
+		"react-toastify": "^10.0.5",
 		"server-only": "^0.0.1",
 		"superjson": "^2.2.1",
 		"typestub-ipfs-only-hash": "^4.0.0",
