feat:Image compression

--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
 		"@trpc/next": "next",
 		"@trpc/react-query": "next",
 		"@trpc/server": "next",
+		"browser-image-compression": "^2.0.2",
 		"firebase": "^10.9.0",
 		"flowbite-react": "^0.7.5",
 		"luxon": "^3.4.4",
