--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,9 @@
 	},
 	"dependencies": {
 		"@aurowallet/mina-provider": "^1.0.2",
+		"@emotion/react": "^11.11.4",
+		"@emotion/styled": "^11.11.5",
+		"@mui/material": "^5.15.16",
 		"@t3-oss/env-nextjs": "^0.9.2",
 		"@tanstack/react-query": "^5.25.0",
 		"@trpc/client": "next",
@@ -43,6 +46,7 @@
 		"@types/react-dom": "^18.2.19",
 		"@typescript-eslint/eslint-plugin": "^7.1.1",
 		"@typescript-eslint/parser": "^7.1.1",
+		"daisyui": "^4.10.5",
 		"eslint": "^8.57.0",
 		"eslint-config-next": "^14.1.3",
 		"eslint-config-prettier": "^9.1.0",
