lightnet token deployment, token interaction WIP
skeleton for zkappWorker for now

--- a/contracts/config.json
+++ b/contracts/config.json
@@ -8,7 +8,7 @@
       "feepayerKeyPath": "/home/karol/.cache/zkapp-cli/keys/lightnet1.json",
       "feepayerAlias": "lightnet1",
       "fee": "0.01",
-      "smartContract": "Add"
+      "smartContract": "FungibleToken"
     }
   }
 }
