--- a/contracts/package.json
+++ b/contracts/package.json
@@ -21,7 +21,8 @@
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "testw": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "lint": "npx eslint src/* --fix",
-    "basic": "npm run build && npm run test GroupBasic"
+    "basic": "npm run build && npm run test GroupBasic",
+    "deployToken": "npm run build && npm run test TokenLightnet"
   },
   "devDependencies": {
     "@babel/preset-env": "^7.16.4",
