--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,6 @@
 	"name": "client",
 	"version": "0.1.0",
 	"private": true,
-	"type": "module",
 	"scripts": {
 		"build": "next build",
 		"dev": "next dev",
@@ -37,7 +36,16 @@
 		"superjson": "^2.2.1",
 		"typestub-ipfs-only-hash": "^4.0.0",
 		"zod": "^3.22.4",
-		"zustand": "^4.5.2"
+		"zustand": "^4.5.2",
+		"@types/node": "20.11.30",
+		"@types/react": "18.2.67",
+		"@types/react-dom": "18.2.22",
+		"autoprefixer": "10.4.19",
+		"eslint": "8.57.0",
+		"eslint-config-next": "14.1.4",
+		"postcss": "8.4.38",
+		"tailwindcss": "3.4.1",
+		"typescript": "5.4.3"
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.56.2",
@@ -55,7 +63,7 @@
 		"prettier": "3.2.5",
 		"prettier-plugin-tailwindcss": "^0.5.11",
 		"tailwindcss": "^3.4.1",
-		"typescript": "^5.4.2"
+		"typescript": "^5.4.3"
 	},
 	"ct3aMetadata": {
 		"initVersion": "7.30.0"
