--- a/contracts/package.json
+++ b/contracts/package.json
@@ -22,6 +22,7 @@
     "testw": "node --experimental-vm-modules node_modules/jest/bin/jest.js --watch",
     "lint": "npx eslint src/* --fix",
     "basic": "npm run build && npm run test GroupBasic",
+    "rand": "npm run build && npm run test examples/RandHash",
     "data": "npm run build && npm run test UserData"
   },
   "devDependencies": {
