--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
 		"react-medium-image-zoom": "^5.2.0",
 		"react-paginate": "^8.2.0",
 		"react-toastify": "^10.0.5",
+		"recharts": "^2.12.7",
 		"server-only": "^0.0.1",
 		"superjson": "^2.2.1",
 		"typestub-ipfs-only-hash": "^4.0.0",
