--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,6 @@
 		"luxon": "^3.4.4",
 		"next": "^14.1.3",
 		"next-auth": "^4.24.6",
-		"o1js": "1.1.0",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.51.2",
@@ -47,8 +46,7 @@
 		"eslint-config-next": "14.1.4",
 		"postcss": "8.4.38",
 		"tailwindcss": "3.4.1",
-		"typescript": "5.4.3",
-		"sliced-contracts": "/Users/karol/Documents/Sliced.club/contracts/sliced-contracts-0.1.2.tgz"
+		"typescript": "5.4.3"
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.56.2",
@@ -71,5 +69,8 @@
 	"ct3aMetadata": {
 		"initVersion": "7.30.0"
 	},
-	"packageManager": "npm@10.2.4"
+	"packageManager": "npm@10.2.4",
+	"peerDependencies": {
+		"o1js": "1.3.0"
+	}
 }
