--- a/contracts/package.json
+++ b/contracts/package.json
@@ -32,6 +32,7 @@
     "@typescript-eslint/parser": "^5.5.0",
     "eslint": "^8.7.0",
     "eslint-plugin-o1js": "^0.4.0",
+    "idmask-zk-programs": "^0.1.3",
     "jest": "^29.7.0",
     "prettier": "^2.3.2",
     "ts-jest": "^29.1.2",
