--- a/contracts/tsconfig.json
+++ b/contracts/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "resolveJsonModule": true,
     "target": "es2020",
     "module": "es2022",
     "lib": ["dom", "esnext"],
