--- a/client/package.json
+++ b/client/package.json
@@ -47,7 +47,8 @@
 		"eslint-config-next": "14.1.4",
 		"postcss": "8.4.38",
 		"tailwindcss": "3.4.1",
-		"typescript": "5.4.3"
+		"typescript": "5.4.3",
+		"sliced-contracts": "/Users/karol/Documents/Sliced.club/contracts/sliced-contracts-0.1.0.tgz"
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.56.2",
