feat: :sparkles: rock,paper,scissors

--- a/client/package.json
+++ b/client/package.json
@@ -19,13 +19,22 @@
 		"@trpc/next": "next",
 		"@trpc/react-query": "next",
 		"@trpc/server": "next",
+		"@types/node": "20.11.30",
+		"@types/react": "18.2.67",
+		"@types/react-dom": "18.2.22",
+		"autoprefixer": "10.4.19",
 		"boring-avatars": "^1.10.2",
 		"browser-image-compression": "^2.0.2",
+		"eslint": "8.57.0",
+		"eslint-config-next": "14.1.4",
 		"firebase": "^10.9.0",
 		"flowbite-react": "^0.7.5",
+		"framer-motion": "^11.2.11",
+		"gsap": "^3.12.5",
 		"luxon": "^3.4.4",
 		"next": "^14.1.3",
 		"next-auth": "^4.24.6",
+		"postcss": "8.4.38",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
 		"react-hook-form": "^7.51.2",
@@ -36,20 +45,13 @@
 		"react-toastify": "^10.0.5",
 		"recharts": "^2.12.7",
 		"server-only": "^0.0.1",
+		"sliced-contracts": "/Users/scottphillips/Documents/Scott_Development/Projects/Sliced/Sliced.club/contracts/sliced-contracts-0.1.0.tgz",
 		"superjson": "^2.2.1",
-		"typestub-ipfs-only-hash": "^4.0.0",
-		"zod": "^3.22.4",
-		"zustand": "^4.5.2",
-		"@types/node": "20.11.30",
-		"@types/react": "18.2.67",
-		"@types/react-dom": "18.2.22",
-		"autoprefixer": "10.4.19",
-		"eslint": "8.57.0",
-		"eslint-config-next": "14.1.4",
-		"postcss": "8.4.38",
 		"tailwindcss": "3.4.1",
 		"typescript": "5.4.3",
-		"sliced-contracts": "/Users/karol/Documents/Sliced.club/contracts/sliced-contracts-0.1.0.tgz"
+		"typestub-ipfs-only-hash": "^4.0.0",
+		"zod": "^3.22.4",
+		"zustand": "^4.5.2"
 	},
 	"devDependencies": {
 		"@types/eslint": "^8.56.2",
